[project]
name = "konpy2"
version = "0.5.1"
description = ""
authors = [
    {name = "hkimjp",email = "hkim@hkim.jp"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
